; ModuleID = '/home/carl/AnghaBench/linux/drivers/vme/extr_vme.c_vme_register_error_handler.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/vme/extr_vme.c_vme_register_error_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vme_error_handler = type { i64, i64, i32, i64, i64, i32 }
%struct.vme_bridge = type { i32 }

@GFP_ATOMIC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.vme_error_handler* @vme_register_error_handler(%struct.vme_bridge* %0, i32 %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.vme_error_handler*, align 8
  %6 = alloca %struct.vme_bridge*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.vme_error_handler*, align 8
  store %struct.vme_bridge* %0, %struct.vme_bridge** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  %11 = load i32, i32* @GFP_ATOMIC, align 4
  %12 = call %struct.vme_error_handler* @kmalloc(i32 48, i32 %11)
  store %struct.vme_error_handler* %12, %struct.vme_error_handler** %10, align 8
  %13 = load %struct.vme_error_handler*, %struct.vme_error_handler** %10, align 8
  %14 = icmp ne %struct.vme_error_handler* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %4
  store %struct.vme_error_handler* null, %struct.vme_error_handler** %5, align 8
  br label %38

16:                                               ; preds = %4
  %17 = load i32, i32* %7, align 4
  %18 = load %struct.vme_error_handler*, %struct.vme_error_handler** %10, align 8
  %19 = getelementptr inbounds %struct.vme_error_handler, %struct.vme_error_handler* %18, i32 0, i32 5
  store i32 %17, i32* %19, align 8
  %20 = load i64, i64* %8, align 8
  %21 = load %struct.vme_error_handler*, %struct.vme_error_handler** %10, align 8
  %22 = getelementptr inbounds %struct.vme_error_handler, %struct.vme_error_handler* %21, i32 0, i32 0
  store i64 %20, i64* %22, align 8
  %23 = load i64, i64* %8, align 8
  %24 = load i64, i64* %9, align 8
  %25 = add i64 %23, %24
  %26 = load %struct.vme_error_handler*, %struct.vme_error_handler** %10, align 8
  %27 = getelementptr inbounds %struct.vme_error_handler, %struct.vme_error_handler* %26, i32 0, i32 1
  store i64 %25, i64* %27, align 8
  %28 = load %struct.vme_error_handler*, %struct.vme_error_handler** %10, align 8
  %29 = getelementptr inbounds %struct.vme_error_handler, %struct.vme_error_handler* %28, i32 0, i32 4
  store i64 0, i64* %29, align 8
  %30 = load %struct.vme_error_handler*, %struct.vme_error_handler** %10, align 8
  %31 = getelementptr inbounds %struct.vme_error_handler, %struct.vme_error_handler* %30, i32 0, i32 3
  store i64 0, i64* %31, align 8
  %32 = load %struct.vme_error_handler*, %struct.vme_error_handler** %10, align 8
  %33 = getelementptr inbounds %struct.vme_error_handler, %struct.vme_error_handler* %32, i32 0, i32 2
  %34 = load %struct.vme_bridge*, %struct.vme_bridge** %6, align 8
  %35 = getelementptr inbounds %struct.vme_bridge, %struct.vme_bridge* %34, i32 0, i32 0
  %36 = call i32 @list_add_tail(i32* %33, i32* %35)
  %37 = load %struct.vme_error_handler*, %struct.vme_error_handler** %10, align 8
  store %struct.vme_error_handler* %37, %struct.vme_error_handler** %5, align 8
  br label %38

38:                                               ; preds = %16, %15
  %39 = load %struct.vme_error_handler*, %struct.vme_error_handler** %5, align 8
  ret %struct.vme_error_handler* %39
}

declare dso_local %struct.vme_error_handler* @kmalloc(i32, i32) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
